# Coursework_Calc24

./: .gitignore  CMakeLists.txt  description_cn.tex  interface.cpp  interface.h  interface_basic.h  interface_file.h  interface_menu.h  interface_online_game.h  interface_poker_display.h  interface_settings.h  interface_timed_game.h  main.cpp  poker.cpp  poker.h  rational.cpp  rational.h  readme.md  solver.h  style.h  version.rc.in
algorithm/: expression.cpp  expression.h  operation.cpp  operation.h  poker.cpp  random.cpp  random.h  rational.h  solver.cpp  utils.cpp  utils.h
img-canvas/: canvas.ai  icon.ai  poker-grad.ai  poker-new.ai  poker.ai  toggle.ai
interface/: calculator.h  file_calculator.h  interface.h  menu.h  online_game.h  poker_display.h  settings.cpp  settings.h  style.h  timed_game.h
styles/: button_blue.qss  button_dark.qss  button_white.qss  edit_box.qss  main_window.qss  menu_list.qss  scoreboard.qss  scoreboard_warning.qss  switch_checkbox.qss
